desktop design done

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,8 @@ input {
   width: 90%;
   padding: 0.5em;
   font-size: 1.5rem;
+  border: none;
+  border-radius: 5px;
 
   margin: 2rem auto 0 auto;
 }
@@ -110,4 +112,18 @@ button:hover {
   padding: 0.5em 1em;
   text-align: left;
   border-radius: 5px;
+}
+
+/* MEDIA QUERIES */
+
+@media (min-width: 480px) {
+  .header {
+    width: 90%;
+    margin: 0 auto;
+    border-radius: 10px;
+  }
+
+  .header h1 {
+    display: none;
+  }
 }
